--- a/hakatonFrontend/package.json
+++ b/hakatonFrontend/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^7.17.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.2",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
